--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlarmPage">
 
+        <activity android:name="AlarmPage">
         </activity>
 
+        <activity android:name="AlarmSounds">
+        </activity>
+
+        <receiver android:name=".myReceiver">
+        </receiver>
 
     </application>
 
